# gmail-mcp-server

./: .gitignore  README.md  pyproject.toml
src/gmail_mcp_server/: __init__.py  server.py
